# RTSP-Stream-Capture-from-IP-Camera-using-OpenCV

./: CMakeLists.txt  LICENSE  README.md  rtsp_record.py  rtsp_record_live_playback.py  rtsp_record_update.py  rtsp_video_downloader.cpp  rtsp_video_downloader.py  video_to_img.py
